--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">COVID-19?</a>
-            <a class="nav-item nav-link" href="#">Be safe!</a>
+            <a class="nav-item nav-link" href="inf/info.html">COVID-19?</a>
+            <a class="nav-item nav-link" href="inf/info2.html">Be safe!</a>
             <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Stay home Be Safe</a>
           </div>
         </div>
