district wise data visualization

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="C:\Users\aniru\Desktop\new\style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
         integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
         crossorigin=""
@@ -136,7 +136,7 @@
 <!--State wise details Banner-->
 
 <div class="jumbotron jumbotron-fluid" style="height: 70px;text-align: center;padding-top: 10px;">
-  <div class="container"   style="height: 70px;">
+  <div class="container-fluid"   style="height: 70px;">
     <h2 class="display-8">Statewise Details </h2>
     
   </div>
@@ -297,6 +297,12 @@
     </div>
   </div>
 <!--4 chart close-->
+
+<!--Button for district data-->
+<div class="container" style="margin-bottom: 50px;">
+  <a class="btn btn-primary btn-lg btn-block" href="inf/district.html" role="button">Click to see district wise details..</a>
+</div>
+<!--Button close for district data-->
 
 
 <!--footer-->
